--- a/order.html
+++ b/order.html
@@ -49,7 +49,7 @@
     <button id = "submit2" class='button' style='margin:12px;font-size:14px;font-weight:bold'>Click to transfer items to cart</button>
 </div>
 
-<!-- change the id of various html elements so that they are unique -->
+<!-- create the buttons, input and event listeners for each product -->
 <script>
       function initializeProductItem(productItemElement) {
         const minusBtn = productItemElement.querySelector(".minus");
@@ -75,4 +75,15 @@
         console.log(productItemElement);
         initializeProductItem(productItemElement);
       }
+</script>
+
+<script>
+    const submit1 = document.getElementById("submit1");
+    var url = "http://127.0.0.1:8000/vgs_step4/default/cart_fv.html*?";
+
+submit1.addEventListener("click", event => {
+    const cart = document.querySelectorAll("input");
+    for(var i = 0; i < cart.length; i++) {url = url + i.toString() + '=' + cart[i].qtyInput.toString() + '&'}
+    location.replace(url)
+    })
 </script>
